--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,14 +1,14 @@
 {
-  "robotWidth": 0.9,
-  "robotLength": 0.9,
+  "robotWidth": 0.8826495233692574,
+  "robotLength": 0.8064495645172352,
   "holonomicMode": true,
   "pathFolders": [
     "simple 1 + 1"
   ],
   "autoFolders": [],
-  "defaultMaxVel": 3.0,
-  "defaultMaxAccel": 3.0,
+  "defaultMaxVel": 3.833,
+  "defaultMaxAccel": 5.393,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
-  "maxModuleSpeed": 4.5
+  "maxModuleSpeed": 3.833
 }
